{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 133,
  "lineage": "92ac30d6-a2fd-213a-ce61-f3f97d1feb15",
  "resources": [
    {
      "module": "module.alb",
      "mode": "data",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:377740208333:loadbalancer/app/callst-events-api-dev/2944b04d05e1f2a8",
            "arn_suffix": "app/callst-events-api-dev/2944b04d05e1f2a8",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-callst-events-api-dev-51073254.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:377740208333:loadbalancer/app/callst-events-api-dev/2944b04d05e1f2a8",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "callst-events-api-dev",
            "security_groups": [
              "sg-055454209470c46dc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03d13f9ac39fe4e18"
              },
              {
                "subnet_id": "subnet-0df67c7359ea9e25e"
              },
              {
                "subnet_id": "subnet-0e499e2d66864beb9"
              }
            ],
            "subnets": [
              "subnet-03d13f9ac39fe4e18",
              "subnet-0df67c7359ea9e25e",
              "subnet-0e499e2d66864beb9"
            ],
            "vpc_id": "vpc-011df16a9f44f88e3",
            "zone_id": "Z35SXDOTRQ7X7K"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "data",
      "type": "aws_lb_listener",
      "name": "alb80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:377740208333:listener/app/callst-events-api-dev/2944b04d05e1f2a8/8ed57c01d201e376",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:377740208333:targetgroup/events-api-tg/54b062afd4229e9e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:377740208333:listener/app/callst-events-api-dev/2944b04d05e1f2a8/8ed57c01d201e376",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:377740208333:loadbalancer/app/callst-events-api-dev/2944b04d05e1f2a8",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {}
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "AlblistenerRule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:377740208333:targetgroup/ogg-target-group/56dd648397a4672f",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:377740208333:listener-rule/app/callst-events-api-dev/2944b04d05e1f2a8/8ed57c01d201e376/393619524b133f58",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/dam/ogg_task"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:377740208333:listener-rule/app/callst-events-api-dev/2944b04d05e1f2a8/8ed57c01d201e376/393619524b133f58",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:377740208333:listener/app/callst-events-api-dev/2944b04d05e1f2a8/8ed57c01d201e376",
            "priority": 2,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb_target_group.ogg-target-group",
            "module.alb.data.aws_lb.alb",
            "module.alb.data.aws_lb_listener.alb80"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ogg-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:377740208333:targetgroup/ogg-target-group/56dd648397a4672f",
            "arn_suffix": "targetgroup/ogg-target-group/56dd648397a4672f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": false,
                "healthy_threshold": 5,
                "interval": 35,
                "matcher": "200",
                "path": "/",
                "timeout": 30,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:377740208333:targetgroup/ogg-target-group/56dd648397a4672f",
            "lambda_multi_value_headers_enabled": false,
            "name": "ogg-target-group",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
              }
            ],
            "target_type": "lambda"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "TG_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:377740208333:targetgroup/ogg-target-group/56dd648397a4672f-20220322072817995900000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:377740208333:targetgroup/ogg-target-group/56dd648397a4672f",
            "target_id": "arn:aws:lambda:us-east-1:377740208333:function:ogg-task-creator-api"
          },
          "dependencies": [
            "module.alb.aws_lambda_permission.alb1",
            "module.alb.aws_lb_target_group.ogg-target-group",
            "module.lambda.aws_lambda_function.ogg-task-creator-api"
          ]
        }
      ]
    },
    {
      "module": "module.lambda",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:987081338440:vpc/vpc-011df16a9f44f88e3",
            "cidr_block": "10.129.224.0/19",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-049410f6b59357e04",
                "cidr_block": "10.129.224.0/19",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0d1bd3f69ee3cacd6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-011df16a9f44f88e3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00e49bacec851fb9d",
            "owner_id": "987081338440",
            "tags": {
              "Name": "sbu-content-dev-useast1-vpc-1",
              "fds:CostCenter": "content",
              "fds:DataClassification": "Internal-use Only",
              "fds:Environment": "dev",
              "fds:Owner": "net-engineers@factset.com",
              "fds:ServiceCatalog": "preferred",
              "fds:TaggingVersion": "1.0",
              "fds:shared-vpc": "default"
            }
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "id"
              }
            ]
          ]
        }
      ]
    }
  ]
}